# llm_optimisation_tools

./: .gitignore  README.md  config.yaml  debug_json.py  mcp.example.yaml  pyproject.toml  test_mcp_startup.sh
docs/: COMPLEX_WORKFLOW.md  CONFIGURATION.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  MODELLER_CHECKER.md  QUICK_REFERENCE.md  TESTING.md  WORKFLOW.md  WORKFLOW_DIAGRAMS.md  example-prompts.md
examples/: modeller_checker_example.py
scripts/: complex_workflow_test.py  langchain_lp_roundtrip.py  langchain_minizinc_roundtrip.py  langchain_modeller_checker.py  langchain_modeller_checker_deprecated.py  mcp_lp_roundtrip.py  mcp_lp_roundtrip_http.py  mcp_lp_roundtrip_stdio.py  mcp_minizinc_roundtrip.py  mcp_minizinc_roundtrip_http.py  mcp_minizinc_roundtrip_stdio.py  workflow_test.py
src/langchain_optimise/: __init__.py  complex_workflow_tool.py  minizinc_tools.py  modeller_checker_tool.py  tools.py  workflow_tool.py
src/mathprog/: __init__.py  langchain.py  mcp.py  solver.py  validator.py
src/modeller_checker/: __init__.py  complex_workflow.py  config.py  mcp.py  workflow.py  workflow_simple_deprecated.py
src/mzn/: __init__.py  langchain.py  mcp.py  solver.py  validator.py
src/optimise_mcp/: __init__.py  lp_validator.py  server.py  solver.py
src/shared/: __init__.py  solver.py
tests/: test_langchain_tools.py  test_minizinc_solver.py  test_server.py  test_solver_utils.py  test_workflow_e2e_langchain_case1.py
