[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimise-mcp"
version = "0.1.0"
description = "MCP server for AI-powered optimization using a 5-agent workflow and MiniZinc solver."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "optimise-mcp maintainers" }
]
keywords = ["mcp", "optimization", "ollama", "minizinc", "constraint-programming"]
license = { text = "MIT" }
dependencies = [
  "langchain-mcp-adapters>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain>=0.3.0",
  "fastmcp>=2.14.0",
  "pydantic>=2.8",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6"
]

[project.scripts]
optimization-workflow = "modeller_checker.mcp:main_stdio"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
console_output_style = "progress"
markers = [
    "e2e: end-to-end integration tests",
]
